# FEM1D

./: CMakeLists.txt  README.md
assembling/: element.h  fe_method.h
assembling/detail/: element.cpp  fe_method.cpp  local_stiffness.cpp
assembling/details/: assembling.cpp  boundary_condition.cpp  element.cpp  fe_method.cpp  local_power.cpp  local_stiffness.cpp  write_res.cpp
data/: data.txt
init_equation/: equation.h
init_equation/details/: equation.cpp
linear_solver/: linear_solver.h
plot/: main.py
start/: main.cpp
tools/algebra/: Mesh1d.h  UniformMesh.h
tools/algebra/details/: Mesh1d.cpp  UniformMesh.cpp
tools/calculus/: integration.cpp
tools/solvers/: zeidel.cpp
